--- a/appWeb/src/app/app.component.html
+++ b/appWeb/src/app/app.component.html
@@ -340,7 +340,7 @@
 
   <!-- Resources -->
   <h2>Hola Mundo!</h2>
-  <p>Here are some links to help you get started:</p>
+  <p>Esta es la practica 1 de Software Avanzado</p>
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
